# ai-literature-review-generator

./: .gitignore  ARCH.md  PLAN.md  PRODUCT_BRIEF.md  README.md  TODO.md  package.json
.github/: CODEOWNERS
.github/workflows/: ci.yml
api/: .eslintrc.js  ormconfig.ts  package.json  tsconfig.json
api/src/: app.module.ts  main.ts
api/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts  jwt.strategy.ts
api/src/config/: configuration.ts  typeorm.config.ts
api/src/controllers/: documents.controller.ts  exports.controller.ts  themes.controller.ts  uploads.controller.ts
api/src/entities/: audit-log.entity.ts  base.entity.ts  document.entity.ts  export.entity.ts  membership.entity.ts  org.entity.ts  project.entity.ts  section.entity.ts  theme.entity.ts  user.entity.ts
api/src/middleware/: audit.middleware.ts  request-context.middleware.ts
api/src/migrations/: 1700000000000-InitCore.ts  1700000001000-DocumentsSections.ts  1700000001200-SectionsEmbedding.ts  1700000001300-ThemeSummary.ts  1700000001400-UsersAuth.ts  1700000002000-RemainderPhase1.ts
api/src/modules/: app.module.ts
api/src/services/: nats.service.ts
api/test/e2e/: export.e2e.test.ts
api/test/integration/: export.test.ts
docs/: README.md
frontend/: next.config.js  package.json  tailwind.config.js  tsconfig.json
frontend/src/components/: BundleBuilder.tsx  EvidencePanel.tsx  ThemeMap.tsx  ThemePanel.tsx
frontend/src/pages/: index.tsx  library.tsx  reports.tsx  themes.tsx
infra/: docker-compose.dev.yml  prometheus.yml
infra/init/: 01_pgvector.sql
workers/: README.md  pyproject.toml
workers/bundle_worker/: main.py  run.py
workers/cluster_worker/: main.py  run.py
workers/common/: db.py
workers/embed_worker/: main.py  run.py
workers/export_worker/: main.py  run.py
workers/label_worker/: main.py  run.py
workers/matrix_worker/: main.py  run.py
workers/meta_worker/: main.py  run.py
workers/pdf_worker/: main.py  run.py
workers/rag_worker/: main.py  run.py
workers/summary_worker/: main.py  run.py
